HTTP154 change to introduce wrapper - incomplete code
Signed-off-by: davidradl <david_radley@uk.ibm.com>